Fixed padding on mobile

--- a/styles.css
+++ b/styles.css
@@ -56,12 +56,14 @@ body {
     background-image: url(images/chicken2.jpg);
     background-size: cover;
     background-attachment: fixed;
-    padding: 40px;
+    padding-top: 40px;
+    padding-bottom: 40px;
 }
 
 .pool {
     height: 100vh;
-    padding: 40px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     background-image: url(images/pool2.jpeg);
     background-size: cover;
     background-attachment: fixed;
